--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="pad-t-1-2">
         <button class="btn" type="submit">Send</button>
       </div>
+    </form>
 
   </body>
 </html>
